# flathub

./: .appdata.xml  .com.github.Eloston.ungoogled-chromium.yaml.bak  .com.github.Eloston.ungoogled-chromium.yaml.swp  .copier-answers.autopretty.yml  .directory  .editorconfig  .flathub.json  .flatpak.gn.swp  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mozconfig  .org.natron.Natron.json.kate-swp  .pre-commit-config.yaml  .prettierrc  .renovaterc.json5  .shellcheckrc  .travis.yml  .yamllint.yaml  0.244-selgame-assert-when-zero.patch  0.245-asserts.patch  00-fix-missing-tags.patch  0000-unbundle-dependencies-common.patch  0000-yasm-gcc-15.patch  0000_PTR_save_to_user.patch  0001-515-runtime-fix-for-Qt.patch  0001-Add-AppStream-metadata.patch  0001-Add-Design-Studio-for-Linux.patch  0001-Add-Open-Age-Rating.patch  0001-Add-an-x11_in_qt6-wrapper.patch  0001-Add-content-rating-tag.patch  0001-Add-content-rating.patch  0001-Add-desktop-and-metainfo-file-for-Linux-distribution.patch  0001-Add-feature-to-use-system-default-file-manager-to-op.patch  0001-Add-missing-include-in-last-qt5.14.patch  0001-Add-oars-rating-to-metainfo.patch  0001-Add-option-to-disable-ALSA-with-PipeWire-as-a-defaul.patch  0001-Add-proper-app-icon.patch  0001-Add-release-and-content-rating-appdata-tags.patch  (+14824 more)
aa/: Makefile.am  Makefile.in  aclocal.m4  alienarena_w32.sln
aa/arena/: maps.lst  server.cfg
aa/config/: config.h.in
aa/data1/: Makefile.in  aclocal.m4  configure
aa/docs/: README.txt  dev-makefile  license.txt
aa/source/: Makefile.am  Makefile.in  codered.dsw  codered.sln  original_Makefile
aa/steambuild/: Makefile  alienarena.x86_64  config.h  readme.txt
aa/unix_dist/: COPYING  INSTALL  NEWS
aa/vs2010/: crx.vcxproj  freetype.vcxproj  libjpeg.vcxproj  libvorbisfile.vcxproj
data/: Product.wxi  app.desktop  com.MarkJBobak.NimApp.desktop  com.MarkJBobak.NimApp.metainfo.xml  com.alderongames.alderonlauncher.desktop  com.alderongames.alderonlauncher.metainfo.xml  com.alderongames.launcher.desktop  com.alderongames.launcher.metainfo.xml  com.github.cjbassi.ytop.metainfo.xml  com.github.marktext.marktext.appdata.xml  com.github.marktext.marktext.desktop  com.github.thorhent.CA.desktop.in  com.github.thorhent.CA.gschema.xml  com.github.thorhent.CA.metainfo.xml.in  com.github.thorhent.CA.service.in  com.hack_computer.Clippy.Extension.appdata.xml  com.hack_computer.Clippy.Extension.metainfo.xml  com.mohfy.word2ipa.desktop.in  com.mohfy.word2ipa.metainfo.xml.in  com.ohthatremindsme.downloader.desktop.in  com.ohthatremindsme.downloader.metainfo.xml.in  com.ohthatremindsme.downloader.service.in  com.spacestation14.Launcher.appdata.xml  com.spacestation14.Launcher.desktop  io.github.bruttazz.FirefoxDevFlatpak.desktop  io.github.bruttazz.FirefoxDevFlatpak.metainfo.xml  io.github.face_hh.Napture.metainfo.xml  io.github.mohfy.word2ipa.desktop.in  io.github.mohfy.word2ipa.metainfo.xml.in  io.github.noobping.listenmoe.desktop  io.github.noobping.listenmoe.metainfo.xml  io.github.noobping.listenmoe.resources.xml  io.github.rsvzz.csven.metainfo.xml  listenmoe.wxs  manual-sources.json  meson.build  metainfo.xml  net.bloupla.ummide.desktop  net.bloupla.ummide.metainfo.xml  org.freefilesync.FreeFileSync.RealTimeSync.desktop  (+13 more)
data/applications/: io.github.plrigaux.sysd-manager.desktop
data/appstream/: io.itsterminal.WebPConverter.appdata.xml
data/dados/: meson.build
data/dependencies/: python3-pytz.json  python3-requests.json
data/icons/: README  meson.build
data/interfaces/: SysdMngr.cmb  button_icon.ui  ex_menu_button.ui  grid_cell.ui  preferences.ui  service_status.ui  sysdmngr.ui  title_bar.ui  unit_info.ui
data/metainfo/: io.github.plrigaux.sysd-manager.metainfo.xml
data/resources/: resources.gresource.xml
data/schemas/: io.github.plrigaux.sysd-manager.gschema.xml
data/styles/: style.css
eu.capybaracode.FilenameNinja/: LICENSE.txt  THIRD_PARTY_NOTICES.md  eu.capybaracode.FilenameNinja.desktop  eu.capybaracode.FilenameNinja.metainfo.xml  eu.capybaracode.FilenameNinja.yml  filename-ninja  pyproject.toml  python3-modules.json
eu.capybaracode.FilenameNinja/licenses/: LGPL-3.0.txt  PYSIDE_LICENSE.txt  QT_LICENSE.txt
icons/: README.md  icon.icns  meson.build
kdbusservicetest/: CMakeLists.txt  kdbusservicetest.cpp
libs/hbb_common/: Cargo.toml
shared-modules/cld2/: CMakeLists.txt  cld2.json
src/: CAsqlite.db  Pipfile  auth_2fa.rs  cert.c  cert.h  check_for_running_tasks.sh  cli.rs  client.rs  clinicalayudante.gresource.xml  clinicalayudante.in  common.rs  conectar.py  core_main.rs  custom_math.c  custom_math.h  enfermedad_window.ui  envvars.sh  errors.rs  flutter.rs  flutter_ffi.rs  framestop.py  http_source.rs  index.htm  io.github.Abstract_AA.Framestop.desktop  ipc.rs  keyboard.rs  lang.rs  lib.rs  listen.rs  locale.rs  log.rs  main-window.c  main-window.h  main-window.ui  main.c  main.py  main.rs  meson.build  message-item.c  message-item.h  (+63 more)
src/analyze/: mod.rs
src/app/: com.handtrixxx.OpenCloud.desktop  com.handtrixxx.OpenCloud.metainfo.xml
src/aux/: backend.rs  mod.rs
src/bootstrap/: Makefile  main.c
src/client/: io_loop.rs
src/data/: PopSearch.desktop
src/frontend/: mod.rs
src/hbbs_http/: account.rs
src/info/: mod.rs  rowitem.rs
src/lang/: ar.rs  be.rs  bg.rs  ca.rs  cn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  eo.rs  es.rs  et.rs  eu.rs  fa.rs  fr.rs  he.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  kz.rs  lt.rs  lv.rs  nb.rs  nl.rs  pl.rs  pt_PT.rs  ptbr.rs  ro.rs  ru.rs  sk.rs  sl.rs  sq.rs  sr.rs  sv.rs  template.rs  th.rs  (+4 more)
src/platform/: delegate.rs  macos.mm  macos.rs  mod.rs  windows.rs
src/privacy_mode/: win_input.rs  win_topmost_window.rs  win_virtual_display.rs
src/server/: connection.rs  dbus.rs  input_service.rs  portable_service.rs  rdp_input.rs  (+4 more)
szafir-host-proxy/: CMakeLists.txt  NativeHostIntegrator.cpp  NativeHostIntegrator.h  NativeMessagingService.cpp  NativeMessagingService.h  flatpak-host-wrapper  main.cpp  pl.deno.kir.szafirhostproxy.service  szafirhost-integration.xml
tinyxml/: Makefile.am  configure.ac  tinyxml.h.in
(+7085 files in other folders)
