[package]
name = "sysd-manager"
version = "0.1.6"
edition = '2021'
license = "GPL-3.0-or-later"
repository = "https://github.com/plrigaux/sysd-manager"
readme = "README.md"
authors = ["Pierre-Luc Rigaux <plrigaux@gmail.com>"]
description = "A GUI to manage systemd units"
keywords = ["gtk4", "linux", "systemd"]
rust-version = "1.80"
build = "build.rs"
include = [
    "build.rs",
    "/src",
    "LICENCE",
    "README.md",
    "/data",
    "!/**/meson.build",
]
default-run = "sysd-manager"

[[bin]]
name = "sysd-manager"
path = "src/main.rs"

[[bin]]
name = "force-build"
path = "build.rs"

[profile.release]
lto = true

[dependencies]
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
log = "0.4"
libc = "0.2"
env_logger = "0.11.3"
dotenv = "0.15.0"
strum = { version = "0.26", features = ["derive"] }
dconf_rs = "0.3.0"
ashpd = "0.8"
tokio = { version = "1.39.1", features = ["full"] }
zbus = "4"
zvariant = "4.2.0"
serde = "1.0"

[build-dependencies]
#glib-build-tools = "0.19.0"
#cargo-generate-rpm = "0.14.1"


[package.metadata.generate-rpm]
summary = "A systemd units manager"
assets = [
    { source = "target/release/sysd-manager", dest = "/usr/bin/sysd-manager", mode = "755" },
    { source = "data/applications/io.github.plrigaux.sysd-manager.desktop", dest = "/usr/share/applications/io.github.plrigaux.sysd-manager.desktop", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg", mode = "644" },
    { source = "data/schemas/io.github.plrigaux.sysd-manager.gschema.xml", dest = "/usr/share/glib-2.0/schemas/io.github.plrigaux.sysd-manager.gschema.xml", mode = "644" },
]

[package.metadata.generate-rpm.requires]
coreutils = ">= 9"
polkit = ">= 123"
systemd = ">= 254"
