[package]
name = "g-up"
version = "1.0.0"
edition = "2021"
authors = ["Nicolas Rodriguez <nicolas.rodalv@educa.jcyl.es>"]
description = "A google drive implementation in rust for uploading files"
repository = "https://github.com/Nichokas/g-up.git"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"

[package.metadata.deb]
maintainer = "Nicolas Rodriguez <nichokas@proton.me>"
copyright = "2024, Nicolas Rodriguez <nichokas@proton.me>"
license-file = "./LICENSE"
extended-description = """A simple utility to upload files to Google Drive using the Google Drive API."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [["target/release/g-up", "usr/bin/", "755"]]
