[package]
name = "listenmoe"
description = "The world's cutest radio. Powered by LISTEN.moe!"
repository = "https://github.com/noobping/listenmoe"
homepage = "https://listen.moe/"
license = "MIT"
authors = ["noobping <hello@noobping.dev>"]
version = "1.0.0"
edition = "2021"

[features]
default = ["controls"]
icon = ["winresource", "glib-build-tools"]
controls = ["souvlaki"]

[dependencies]
rodio = { version = "^0.21.1", default-features = false, features = ["playback"] }
symphonia = { version = "^0.5.5", features = ["ogg", "vorbis"] }
reqwest = { version = "^0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }
adw = { version = "^0.8.0", package = "libadwaita", features = ["v1_5"] }
serde_json = "^1.0.145"
serde = "^1.0.228"
tungstenite = { version = "^0.28.0", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
gettext-rs = "^0.7.7"
souvlaki = { version = "^0.8.3", optional = true, default-features = false, features = ["use_zbus"] }
dirs-next = "^2.0.0"
time = { version = "^0.3.44", features = ["parsing"] }
quick-xml = "^0.38.4"

[build-dependencies]
glib-build-tools = { version = "^0.21.0", optional = true}
winresource = { version = "^0.1.28", optional = true}
