clang_use_chrome_plugins=false
custom_toolchain="//build/toolchain/linux/unbundle:default"
enable_iterator_debugging=false
enable_nacl=false
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
host_toolchain="//build/toolchain/linux/unbundle:default"
is_clang=true
is_debug=false
is_official_build=true
proprietary_codecs=true
treat_warnings_as_errors=false
use_gnome_keyring=false
use_kerberos=false
use_sysroot=false
