blink_symbol_level=0
clang_use_chrome_plugins=false
custom_toolchain="//build/toolchain/linux/unbundle:default"
enable_nacl=false
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
host_toolchain="//build/toolchain/linux/unbundle:default"
is_official_build=true
proprietary_codecs=true
treat_warnings_as_errors=false
use_gnome_keyring=false
use_kerberos=false
use_lld=true
use_pulseaudio=true
use_sysroot=false
use_udev=false
