use_sysroot=false
custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
use_udev=false
use_lld=true
enable_nacl=false
blink_symbol_level=0
use_gnome_keyring=false
use_pulseaudio=true
clang_use_chrome_plugins=false
is_official_build=true
treat_warnings_as_errors=false
proprietary_codecs=true
ffmpeg_branding="Chrome"
is_component_ffmpeg=true
is_cfi=false
