[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sshpilot"
version = "3.8.3"
requires-python = ">=3.9"
description = "SSH connection manager and terminal"
dependencies = [
    "PyGObject>=3.42",
    "pycairo>=1.20.0",
    "paramiko>=3.4",
    "cryptography>=42.0",
    "secretstorage>=3.3; platform_system == \"Linux\"",
    "keyring>=24.3",
    "psutil>=5.9.0",
]

[tool.setuptools.packages.find]
include = ["sshpilot*"]
exclude = ["packaging*", "screenshots*"]
