[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "headset-battery-indicator"
version = "1.3.0"
description = "Battery indicator for wireless headsets using HeadsetControl."
authors = [{ name = "Juan José Vázquez Prieto" }]
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.9"
dependencies = [
    "pyside6>=6.5.0",
]

[project.scripts]
headset-battery-indicator = "headset_battery_indicator.__main__:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["headset_battery_indicator"]
exclude = ["icons", "logs", "deps"]

[tool.setuptools.package-data]
headset_battery_indicator = ["icons/*.svg", "icons/*.png"]
