[project]
name = "cloud.ivanbotty.Launcher"
version = "0.0.1"
description = "A modern GTK4/Adwaita desktop launcher for Linux."
authors = [{ name = "Ivan Bottigelli", email = "droidbotty@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "PyGObject>=3.44",
    "google-generativeai>=0.3.0", # dependency for genai
    "PyYAML>=6.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
cloud-ivanbotty-launcher = "cloud.ivanbotty.Launcher.main:main"

[tool.setuptools]
packages = ["cloud.ivanbotty.Launcher"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
