[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filename-ninja"
version = "1.0.0"
description = "Multi-platform open source GUI application for bulk renaming of files."
readme = "README.md"
authors = [{ name = "Zbyněk Šťáva" }]
license = "MIT"
license-files = ["LICENSE.txt", "licenses/*"]
keywords = [
    "rename",
    "batch-rename",
    "bulk-rename",
    "file-renamer",
    "filename",
    "regex",
    "desktop",
    "gui",
    "qt",
    "pyside6",
    "cross-platform",
]

dependencies = [
    "PySide6>=6.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://capybara-code.gitlab.io/filename-ninja/"
Repository = "https://gitlab.com/capybara-code/filename-ninja/"
Documentation = "https://capybara-code.gitlab.io/filename-ninja/help.html"
Issues = "https://gitlab.com/capybara-code/filename-ninja/-/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["filename_ninja*"]

[tool.setuptools.package-data]
filename_ninja = ["icons/*"]
